--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ hr {
 }
 
 .mark {
-    font-size: 3px;
+    font-size: 1em;
     color: #EAF6F6;
     padding-bottom: 30px;
     padding-top: 30px;
